query filter not work

--- a/.env
+++ b/.env
@@ -1,3 +1,8 @@
 PORT=3000
-FS_API=SNYPECLB5DTVH5WW3PGBEZQDAT2XADCNS5RZQV3N0GAJ3HLS
+FS_CLIENT=SNYPECLB5DTVH5WW3PGBEZQDAT2XADCNS5RZQV3N0GAJ3HLS
 FS_SECRET=MF1RW2YVOUW5XJIJOGMPUIPHCKZYD2KYLI42IETOUPP5EEO1
+FS_VENUES=https://api.foursquare.com/v2/venues/search
+FS_FILTER=4bf58dd8d48988d1e5931735
+
+
+##EXAMPLE-VENUES-LIST-API-CALL: https://api.foursquare.com/v2/venues/search?ll=40.7,-74&client_id=CLIENT_ID&client_secret=CLIENT_SECRET&v=YYYYMMDD
