--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@babel/preset-env": "^7.1.0",
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.4",
+    "bluebird": "^3.5.3",
     "cors": "^2.8.5",
     "css-loader": "^2.1.1",
     "dotenv": "^6.2.0",
